--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css">
-    <link rel="manifest" href="./manifest.json">	    <title>Search GitHub</title>
+    <link rel="manifest" href="./manifest.json">	    
 <link rel="apple-touch-icon" sizes="57x57" href="./icons/apple-icon-57x57.png">	    
 <link rel="apple-touch-icon" sizes="60x60" href="./icons/apple-icon-60x60.png">	
 <link rel="apple-touch-icon" sizes="72x72" href="./icons/apple-icon-72x72.png">	
@@ -23,12 +23,6 @@
 <meta name="msapplication-TileImage" content="./icons/ms-icon-144x144.png">	
 <meta name="theme-color" content="#ffffff">  	
   <title>Search GitHub</title>
-  <title>Search GitHub</title>
-    
-  
-  
-  
-  
     <style>
         .abc{
             margin: 5px 15px 0px 0px;
